correçoes de SQL e criação dos controllers3